# LDC-Solver

./: .gitignore  CMakeLists.txt  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md
benchmarks/data/: input
docs/: macOS_build_guide.md
examples/basic_cavity/: input
examples/basic_cavity/Visualize/: out.m
examples/re100/: input
examples/re100/Visualize/: out.m
examples/re1000/: input
examples/re1000/Visualize/: out.m
examples/re400/: input
examples/re400/Visualize/: out.m
scripts/: build.sh
src/cpp/core/: BoundaryConditions.cpp  CMakeLists.txt  Convection.cpp  Diffusion.cpp  Initialize.cpp  LDC.hpp  Projection.cpp  Solver.cpp  main.cpp  tests.cpp
src/python/prototype/: LDC.py  README.md  __init__.py  ghia_data.py  operators.py
src/python/visualization/: __init__.py  benchmark_ldc.py  visualize_ldc.py  visualize_tests.py
tests/: input
